--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
   <section class="product-section">
     <div class="product-container">
-      <h2>  R PRODUCTS</h2>
+      <h2>  OUR PRODUCTS</h2>
       <div class="product-grid">
   
         <div class="product-card">
