--- a/filter-8.html
+++ b/filter-8.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shreya Water Tech LLP</title>
-  <link rel="stylesheet" href="8'FF.css">
+   <!-- Main CSS -->
+   <link rel="stylesheet" href="style.css">
+
+   <!-- Page-specific CSS -->
+   <link rel="stylesheet" href="filter-8.css">
 
 </head>
 <body>
@@ -46,7 +50,7 @@
         <div class="product-image">
           <img src="images/copper-stp-1.jpg" alt="Semi Transparent Filter">
         </div>
-        <h3>Copper Alkaline Filter (Semi-Transparent)</h3>
+        <h3>Copper Alkaline Filter <br>(Semi-Transparent)</h3>
       </div>
 
       <div class="product-card" 
