--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <p>
               Balanced Power,Lasting Purity
             </p>
-            <a href="8'ff.html" class="product-btn">Learn More</a>
+            <a href="filter-8.html" class="product-btn">Learn More</a>
           </div>
         </div>
   
@@ -139,11 +139,13 @@
 
 <!--FOOTER SECTION --> 
 
-  <div class="logo-footer">
+  
+  <footer class="site-footer">
+
+    <div class="logo-footer">
  <center> <img src="images/shreya water logo.png" height="30px" width="auto" align-center> </center>
   </div>
 
-  <footer class="site-footer">
     <div class="footer-container">
         <div class="footer-column">
         
